fixes and improvements

--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "3box": "^1.3.0",
+    "3box": "^1.7.1",
     "axios": "^0.18.0",
-    "bignumber.js": "^8.0.1",
+    "bignumber.js": "^8.1.1",
     "ethjs": "^0.4.0",
     "qr-image": "^3.2.0",
-    "react": "^16.6.3",
+    "react": "^16.8.6",
     "react-blockies": "^1.4.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.6",
     "react-qr-reader": "^2.1.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^4.0.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.3",
+    "styled-components": "4.2.0",
     "walletconnect": "^0.7.28"
   },
   "scripts": {
@@ -30,12 +30,12 @@
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.15",
     "@types/qr-image": "^3.2.1",
-    "@types/react": "^16.7.17",
+    "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/react-qr-reader": "^2.1.2",
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
-    "@types/styled-components": "^4.1.4",
+    "@types/styled-components": "4.1.8",
     "typescript": "^3.2.2"
   },
   "eslintConfig": {
