--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ethereum POS",
-  "name": "Ethereum POS System",
+  "short_name": "WalletConnect Pay",
+  "name": "WalletConnect Pay",
   "icons": [
     {
       "src": "favicon.ico",
