--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "4.2.0",
+    "web3": "^1.0.0-beta.55",
     "web3connect": "^1.0.0-beta.6"
   },
   "scripts": {
