--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "4.2.0",
-    "web3": "^1.0.0-beta.55"
+    "web3": "^1.0.0-beta.55",
+    "web3connect": "^1.0.0-beta.7"
   },
   "scripts": {
     "start": "react-scripts-ts start",
