--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "walletconnect-pay-frontend",
+  "description": "WalletConnect Pay - Ethereum Point-of-Sale System with WalletConnect support",
   "version": "0.3.0",
   "private": true,
+  "author": "WalletConnect Pay <walletconnectpay@gmail.com>",
+  "license": "LGPL-3.0",
   "dependencies": {
     "@walletconnect/browser": "^1.0.0-beta.25",
     "axios": "^0.18.0",
@@ -10,6 +13,7 @@
     "react": "^16.8.6",
     "react-blockies": "^1.4.0",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-qr-reader": "^2.1.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -21,6 +25,9 @@
     "web3connect": "^1.0.0-beta.7"
   },
   "scripts": {
+    "clean:build": "rm -rf build",
+    "clean:node_modules": "rm -rf node_modules",
+    "clean:all": "npm run clean:build && npm run clean:node_modules",
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
@@ -32,6 +39,7 @@
     "@types/qr-image": "^3.2.1",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
+    "@types/react-helmet": "^5.0.8",
     "@types/react-qr-reader": "^2.1.2",
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
