--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.3.0",
   "private": true,
   "author": "WalletConnect Pay <walletconnectpay@gmail.com>",
-  "license": "LGPL-3.0",
+  "license": "GPL-3.0",
   "dependencies": {
     "@walletconnect/browser": "^1.0.0-beta.25",
     "axios": "^0.18.0",
