--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walletconnect-pay-frontend",
-  "description": "WalletConnect Pay - Ethereum Point-of-Sale System with WalletConnect support",
+  "description": "WalletConnect Pay - Ethereum POS System with WalletConnect support",
   "version": "0.3.0",
   "private": true,
   "author": "WalletConnect Pay <walletconnectpay@gmail.com>",
@@ -54,5 +54,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5001"
 }
