--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@walletconnect/browser": "^1.0.0-beta.25",
     "axios": "^0.18.0",
     "bignumber.js": "^8.1.1",
+    "is-ipfs": "^0.6.1",
     "qr-image": "^3.2.0",
     "react": "^16.8.6",
     "react-blockies": "^1.4.0",
