--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "bignumber.js": "^8.1.1",
     "browser-image-resizer": "^2.0.1",
+    "date-fns": "^1.30.1",
     "is-ipfs": "^0.6.1",
     "qr-image": "^3.2.0",
     "react": "^16.8.6",
