--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-image-resizer": "^2.0.1",
     "date-fns": "^1.30.1",
     "is-ipfs": "^0.6.1",
+    "lodash.merge": "^4.6.1",
     "qr-image": "^3.2.0",
     "react": "^16.8.6",
     "react-blockies": "^1.4.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/lodash.merge": "^4.6.6",
     "@types/node": "^10.12.15",
     "@types/qr-image": "^3.2.1",
     "@types/react": "^16.7.20",
