update react-router-dom to v5

--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@walletconnect/browser": "^1.0.0-beta.25",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "browser-image-resizer": "^2.0.1",
+    "connected-react-router": "^6.5.2",
     "date-fns": "^1.30.1",
+    "history": "^4.9.0",
     "is-ipfs": "^0.6.1",
     "lodash.merge": "^4.6.1",
     "qr-image": "^3.2.0",
     "react": "^16.8.6",
     "react-blockies": "^1.4.0",
     "react-dom": "^16.8.6",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts-ts": "^4.0.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "4.2.0",
+    "styled-components": "4.2.1",
     "tweetnacl": "^1.0.1",
     "tweetnacl-util": "^0.15.0",
     "web3": "^1.0.0-beta.55",
