--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@walletconnect/browser": "^1.0.0-beta.25",
+    "@walletconnect/utils": "^1.0.0-beta.29",
     "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "browser-image-resizer": "^2.0.1",
