--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-image-resizer": "^2.0.1",
     "connected-react-router": "^6.5.2",
     "date-fns": "^1.30.1",
+    "ethers": "^4.0.39",
     "history": "^4.9.0",
     "is-ipfs": "^0.6.1",
     "lodash.merge": "^4.6.1",
@@ -50,7 +51,7 @@
     "@types/react-redux": "^7.0.1",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "4.1.8",
-    "typescript": "^3.2.2"
+    "typescript": "^3.7.2"
   },
   "eslintConfig": {
     "extends": "react-app"
